--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <script src="js/index.js" type="module"></script>
+    <link rel="stylesheet" href="style/styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>POKEDEX</title>
+  </head>
+  <body>
+    <div class="main-container"></div>
+  </body>
+</html>
