added innerHTML method

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,6 @@
     <title>POKEDEX</title>
   </head>
   <body>
-    <div class="main-container"></div>
+    <div class="container"></div>
   </body>
 </html>
