--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="/public/style/styles.css" />
     <script src="js/index.js" type="module"></script>
-    <link rel="stylesheet" href="style/styles.css" />
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>POKEDEX</title>
+    <title>Document</title>
   </head>
+
   <body>
-    <div class="container"></div>
+    <div class="container-fluid"></div>
   </body>
 </html>
