--- a/public/index.html
+++ b/public/index.html
@@ -19,5 +19,6 @@
 
   <body>
     <div class="container-fluid"></div>
+    <img href="/public/images/heading-logo.png" alt="Pokemon-Logo" />
   </body>
 </html>
